Mon Oct 14 2002 David Reveman (c99drn@cs.umu.se)

	*** Waimea v0.3.5 release ***
   Added multiple desktop support
	Added lazy transparency redrawing

Sun Oct 13 2002 David Reveman (c99drn@cs.umu.se)

   Added double buffered text rendering support
	Added MoveToSmartPlace action

Wed Oct 09 2002 David Reveman (c99drn@cs.umu.se)

   *** Waimea v0.3.4 release ***
	Added text shadow support

Sun Oct 06 2002 David Reveman (c99drn@cs.umu.se)

	Added Regular expression matching

Tue Sep 24 2002 David Reveman (c99drn@cs.umu.se)

   Added multiple screen support

Fri Aug 16 2002 David Reveman (c99drn@cs.umu.se)

   Added smart menu placement
   Added window info expansion for menus

Fri Aug  9 2002 David Reveman (c99drn@cs.umu.se)

   Added dynamic menus

Wed Aug  7 2002 David Reveman (c99drn@cs.umu.se)

   Added delay support to action system

Wed Jun  5 2002 David Reveman (c99drn@cs.umu.se)

   *** Waimea v0.3.3 release ***
   Added translucent font support
   Added XftPattern matching support

Sun May 19 2002 David Reveman (c99drn@cs.umu.se)

   *** Waimea v0.3.2 release ***

Fri May 17 2002 David Reveman (c99drn@cs.umu.se)

   Added configurable titlebar buttons

Thu May 10 2002 David Reveman (c99drn@cs.umu.se)

   *** Waimea v0.3.1 release ***

Tue May  7 2002 David Reveman (c99drn@cs.umu.se)

   Added pixmap texture support

Sun May  5 2002 David Reveman (c99drn@cs.umu.se)

   *** Waimea v0.3.0 release ***

Sat May  4 2002 David Reveman (c99drn@cs.umu.se)

   Added translucent texture support

Fri Apr 26 2002 David Reveman (c99drn@cs.umu.se)

   Finished action system v2

Wed Apr 24 2002 David Reveman (c99drn@cs.umu.se)

   *** Waimea v0.2.0 release ***

Thu Apr 21 2002 David Reveman (c99drn@cs.umu.se)

   Added support for libXft version 2

Thu Feb  7 2002 David Reveman (c99drn@cs.umu.se)

   *** Waimea v0.1.7 release ***
   Added support for gcc 3

Wed Feb  6 2002 David Reveman (c99drn@cs.umu.se)

   *** Waimea v0.1.6 release ***
