@@ -1,3 +1,7 @@
+Mon Oct 28 2002 David Reveman (c99drn@cs.umu.se)
+
+   Added XINERAMA support
+
 Mon Oct 14 2002 David Reveman (c99drn@cs.umu.se)
 
 	*** Waimea v0.3.5 release ***
